2003-10-01  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Remember the file paths, and open the highest common folder if the
	user picks Open when the rip is completed. This makes the button
	useful :)

2003-10-01  Ross Burton  <ross@burtonini.com>

	* src/sj-util.[ch]:
	Added g_list_deep_free()

	* src/sj-main.c:
	* src/sj-structures.c:
	Use deep_free

2003-09-30  Bastien Nocera  <hadess@hadess.net>

	* src/sj-extractor.c: (eos_cb), (tick_timeout_cb),
	(sj_extractor_extract_track), (sj_extractor_cancel_extract):
	Make sure that the pipeline is rebuilt for each track (work-around
	bug #122416)

2003-09-29  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-musicbrainz.c:
	Correctly handle the artist in compilation CDs.

2003-09-29  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Connect to the error callback.

2003-09-29  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.[ch]:
	Add an error signal for reporting errors.

2003-09-26  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* src/sj-extracting.c: (on_extract_activate):
	Fix crash when closing progress dialog (using esc or WM close button).

2003-09-26  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* src/sj-extracting.c: (on_progress_cancel_clicked),
	(on_extract_activate):
	Fix crash when ripping after cancelling.
	Set progress bar to 0 before showing progress dialog.

2003-09-26  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* src/cd-drive.c: (linux_scan):
	Fix devfs detection.

2003-09-25  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Add a very basic error handler for now.

2003-09-25  Ross Burton  <ross@burtonini.com>

	* src/bacon-cd-selection.[ch]:
	* src/cd-drive.c:
	* src/dvd_plus_rw_utils.cpp:
	Updated libbacon sources.

2003-09-24  Bastien Nocera  <hadess@hadess.net>

	* src/sj-extractor.c: (sj_extractor_supports_encoding):
	* src/sj-extractor.h:
	* src/sj-main.c: (main): check for the cdparanoia plugin being present
	(Closes: #123122)
