@@ -1,5 +1,11 @@
 2003-10-01  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-metadata-musicbrainz.c:
+	Threaded lookup!  However, CD detection etc is still blocking, but
+	its an improvement.
+	
+2003-10-01  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-extracting.c:
 	Remember the file paths, and open the highest common folder if the
 	user picks Open when the rip is completed. This makes the button
